--- a/package.json
+++ b/package.json
@@ -155,7 +155,6 @@
     "drizzle-kit": "^0.31.7",
     "ibm-cloud-sdk-core": "^5.4.4",
     "jest": "^30.2.0",
-    "vitest": "^4.0.0",
     "knip": "^5.70.1",
     "langfuse": "^3.38.6",
     "madge": "^8.0.0",
@@ -167,6 +166,7 @@
     "playwright-extra": "^4.3.6",
     "prettier": "3.6.2",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
+    "read-excel-file": "^6.0.1",
     "sharp": "^0.34.5",
     "shx": "^0.4.0",
     "source-map-support": "^0.5.21",
@@ -174,8 +174,8 @@
     "ts-dedent": "^2.2.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.9.3",
+    "vitest": "^4.0.0",
     "winston-transport": "^4.9.0",
-    "xlsx": "^0.18.5",
     "zod-to-json-schema": "^3.25.0"
   },
   "optionalDependencies": {
@@ -226,8 +226,8 @@
     "playwright": "^1.56.1",
     "playwright-extra": "^4.3.6",
     "puppeteer-extra-plugin-stealth": "^2.11.2",
-    "sharp": "^0.34.5",
-    "xlsx": "^0.18.5"
+    "read-excel-file": "^6.0.1",
+    "sharp": "^0.34.5"
   },
   "dependencies": {
     "@anthropic-ai/sdk": "^0.71.0",
